layout shift problem have been resolved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,9 +7,17 @@ body {
   text-align: left;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
+  .authorImage {
+    width: 190px; height: 190px; margin: auto; border-radius: 95px; overflow: hidden;
+  }
   
-  
+}
+
+@media screen and (min-width: 501px) {
+  .authorImage {
+    width: 350px; height: 350px; margin: auto; border-radius: 175px; overflow: hidden;
+  }
 }
 
 @keyframes fadein {
